# rust_server

./: Cargo.toml
src/: error.rs  main.rs  model.rs
src/web/: routes_login.rs
