[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"]}
hyper = "1.3.1"
tokio = {version = "1.38.0", features = ["full"]}
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.118"
tower-cookies = "0.10.0"
